# systems-project

./: .gitignore  README.md
.devcontainer/: Dockerfile  ros_entrypoint.sh
src/camera/: CMakeLists.txt  package.xml
src/camera/script/: serial_bridge.py
src/camera/src/: camera.cpp
src/controller/: package.xml  setup.py
src/controller/controller/: controller.py
src/hardware_interfaces/hardware_interfaces/: manipulator_actuator.py  ultrasonic_sensor.py  voice_sensor.py
src/hardware_interfaces/launch/: hardware_interfaces_launch.py
src/kinematics/: CMakeLists.txt
src/kinematics/src/: kinematics_node.cpp
src/motor_controller/motor_controller/: motor_controller_node.py
src/mpc/: CMakeLists.txt  package.xml
src/mpc/src/: path.cpp
src/mpu9250_driver/: CMakeLists.txt  package.xml
src/mpu9250_driver/src/: mpu9250_node.cpp
src/mpu9250_driver/src/mpu9250_driver/: Mpu9250Class.cpp  Mpu9250Class.h
src/object_tracker/: package.xml  setup.py
src/object_tracker/object_tracker/: object_tracker_node.py  set_mask.py
src/rvio2/config/: rvio2_euroc.yaml
src/rvio2/src/rvio2/: System.cc
